--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <defaultGoal>install</defaultGoal>
     </build>
 
 </project>
