--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/voter
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.mustache.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
 spring.jpa.hibernate.ddl-auto = none
