--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.freemarker.expose-request-attributes=true
 spring.jpa.hibernate.ddl-auto = none
+upload.path=/D:/voter/uploads
