--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.freemarker.expose-request-attributes=true
 spring.jpa.hibernate.ddl-auto = none
 upload.path=/D:/voter/uploads
+server.port=8090
