--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,15 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.freemarker.expose-request-attributes=true
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = update
 upload.path=/D:/voter/uploads
 server.port=8090
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=suunn28@gmail.com
+spring.mail.password=elektrique2805
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+mail.debug=true
