--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.freemarker.expose-request-attributes=true
-spring.jpa.hibernate.ddl-auto = update
 upload.path=/D:/voter/uploads
 server.port=8090
 
@@ -15,3 +14,7 @@ spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mail.debug=true
+
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.flyway.baseline-on-migrate=true
