--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.46</version>
+            <!--TODO uncomment this version at home-->
+            <!--version>5.1.46</version-->
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
