--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ mail.debug=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 spring.flyway.baseline-on-migrate=true
+
+recaptcha.secret=6Ldu6X8UAAAAAKHjx3K_hycz0tUFYuNBIum-CMtg
+
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
